--- a/scene.html
+++ b/scene.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 <svg width=1000 height=1000>
-	<polygon points="120.0,60.0 270.0,280.0 240.0,320.0 110.0,80.0 "fill="red" />
+	<polygon points="120.0,60.0 270.0,280.0 240.0,320.0 110.0,80.0 "fill="green"stroke="blue"stroke="10" />
+	<ellipse cx="3.140000" cy="14.300000" rx="100.000000" ry="100.000000"fill="red"/>
 </svg>
 </body>
 </html>
